# omnivim

./: .gitignore  build.bat  build.sh  main.py  pyproject.toml  readme.md  requirements.txt  setup.bat  setup.cfg  style.css
Windows_Mouse_Movments/: main_windows.py  mouse_mode.py  normal_mode.py  visual_mode.py
common/: mode.py  mode_manager.py
graphics/: gui.py  tray.py
